<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonathanlieblich.somesortofcommerceyousay.ItemDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/item_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="16dp"
                android:layout_centerVertical="true"
                android:id="@+id/back_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_arrow_back_black_24dp"/>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#fff"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/back_btn"/>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/item_picture"
        android:layout_below="@+id/item_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_picture"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_description"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/add_to_cart"
        android:background="@drawable/ic_control_point_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/add_to_cart"
        android:layout_alignParentBottom="true"
        android:inputType="number"
        android:hint="Quantity"/>

</RelativeLayout>
